# robocup_2025

./: README.md
cv_utils/: CMakeLists.txt  package.xml  setup.cfg  setup.py
cv_utils/bucket_detector/: bucket_detector.py
drone_lib/: CMakeLists.txt  package.xml
drone_lib/include/drone/: Drone.hpp
drone_lib/src/: Drone.cpp
fase1/: CMakeLists.txt  package.xml
fase1/include/fase1/: CoordinateTransforms.hpp  landing_state.hpp  search_bases_state.hpp  takeoff_state.hpp  visit_bases_state.hpp
fase1/src/: CoordinateTransforms.cpp  fase1.cpp  fase1_dummy.cpp
tdp_challenge/: CMakeLists.txt  package.xml
tdp_challenge/include/position/: Movement.hpp  goto_position_state.hpp  initial_takeoff_state.hpp  landing_state.hpp  precision_align_state.hpp  rotate_state.hpp
tdp_challenge/include/position_dummy/: rotate_state.hpp
tdp_challenge/include/transverse/: ArenaPoint.hpp  landing_state.hpp  return_home_state.hpp
tdp_challenge/launch/: position.launch.py
tdp_challenge/src/: position.cpp  position_dummy.cpp  transverse.cpp
